<resources>
    <string name="app_name">iGarden</string>
    <string name="portada">portada</string>
    <string name="glicina">Glicina</string>
    <string name="hiedra">Hiedra</string>
    <string name="jazmin">Jazmín</string>
    <string name="lavanda">Lavanda</string>
    <string name="limonero">Limonero</string>
    <string name="lirios">Lirios</string>
    <string name="menta">Menta</string>
    <string name="peonias">Peonias</string>
    <string name="romero">Romero</string>
    <string name="tomillo">Tomillo</string>
    <string name="tulipanes">Tulipanes</string>
    <string name="jacinto">Jacinto de agua</string>
    <string name="add">Añadir</string>
    <string name="info">info</string>
    <string name="mijardin">Mi jardín</string>
    <string name="back">back</string>
    <string name="tipo_planta">Planta</string>
    <string name="riego">Riego</string>
    <string-array name="ubicacion">
        <item>Interior</item>
        <item>Exterior</item>
        <item>Interio/exterior</item>
    </string-array>
    <string name="seleccionar">Seleccionar imagen</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="sol">Sol</string>
    <string name="sombra">Sombra</string>
    <string name="necesita">Necesita:</string>
    <string name="imagen">Imagen</string>
    <string name="cuenta">Cuenta</string>
    <string name="ajustes">Ajustes</string>
    <string name="salir">Salir</string>
    <string name="planta">planta</string>
    <string name="regadera">regadera</string>
    <string name="dialog">Para borrar mantena pulsada la carta donde se muestra la planta</string>
    <string name="floracion_glicina">Floración: finales de invierno - principios de verano </string>
    <string name="riego_glicina">Riego: Regular</string>
    <string name="titulo_caract_glicina">Características</string>
    <string name="c_p_1_glicina">Las wisterias o glicinas son plantas trepadoras muy vigorosas y longevas que con el paso de los años llegan a desarrollar una wisteria. Debemos tener en cuenta su gran vigor y volumen final para evitar problemas de escala en un futuro. Cada primavera desarrollan unas maravillosas flores en tonos blancos, azules y rosas violáceos antes de que crezcan las hojas. La variedad rosa se caracteriza por tener un mata bastante enredada con muchos tallos finos y muy vigorosos. La variedad azul, sin embargo, es mucho más compacta.</string>
    <string name="titulo_cultivo_glicina">Cultivo</string>
    <string name="cul_p_1_glicina">Si la cultivamos en un contenedor, enseguida explorará y ocupará todo el volumen de tierra. Esto derivará en un crecimiento raquítico y en una floración insignificante, por lo que no es aconsejable. El espectacular aroma que emanan de sus ramilletes de flores conquistará a más de uno, aunque será más o menos intenso dependiendo de la variedad. Sus frutos son unas vainas aterciopeladas muy vistosas.</string>
    <string name="cul_p_2_glicina">Uno de los requisitos de la wisteria es que se plante en un suelo profundo, ya que cuenta con unas raíces ramificadas y muy agresivas debido a su vigorosidad de crecimiento.Este arbusto trepador prefiere los suelos ácidos, aunque se puede cultivar en cualquier suelo teniendo precaución con los suelos demasiado húmedos o muy cálcareos (que provocan clorosis férrica).</string>
    <string name="titulo_plagas_glicina">Plagas y enfermedades</string>
    <string name="cp_p_1_glicina">Las enfermedades más comunes son las manchas en la hoja debido a hongos, el oidio, la roya o virosis.</string>
    <string name="cp_p_2_glicina">Las plagas más comunes que afectan a la wisteria o glicina son los pulgones, las cochinillas o la abeja cortadora de hoja.</string>
    <string name="ubicacion_hiedra">Ubicación: interior y exterior</string>
    <string name="riego_hiedra">Riego: Moderado</string>
    <string name="titulos_descrip_hiedra">Descripción</string>
    <string name="d_1_hiedra">En origen, la hiedra es una planta de sotobosque que primero tiene un porte rastrero hasta que se encuentra con un soporte como el tronco de un árbol, al cual se adhiere gracias a unas raicillas aéreas, trepando en busca de luz para proceder a la floración. Como planta de interior, destacamos la elegancia de su porte colgante y los matices y dibujos en verde y color crema de las distintas variedades. La variedad Golden Marco, por ejemplo, posee las hojas pequeñas matizadas en verde y amarillo.</string>
    <string name="titulo_cuidados_hiedra">Cuidados</string>
    <string name="c_1_hiedra">Las hiedras toleran exposiciones no excesivamente luminosas aunque su desarrollo óptimo lo tienen en condiciones de luz abundante, sin sol directo. Le gustan las temperaturas frescas.</string>
    <string name="c_2_hiedra">La tierra debe mantenerse húmeda pero sin abusar de los encharcamientos ya que suelen producir amarilleamiento y caída de las hojas. Para potenciar el brillo propio de las hojas es aconsejable rociarlas regularmente con agua tibia.</string>
    <string name="titulo_plagas_hiedra">Plagas y enfermedades</string>
    <string name="cp_p_1_hiedra">Las enfermedades más cómunes son bacterias, antracnosis y negrilla.</string>
    <string name="cp_p_2_hiedra">Las plagas más comunes que afectan a la hiedra son los pulgones, la araña roja, las cochinillas o los trips.</string>
    <string name="ubicacion_jazmin">Lugar de cultivo: interior y exterior</string>
    <string name="riego_jazmin">Riego: Moderado</string>
    <string name="titulos_descrip_jazmin">Características</string>
    <string name="d_1_jazmin"> Inconfundible por su intenso aroma, especial por su silueta de planta trepadora y muy llamativo debido a su frondosidad, el Jazmín es una especial planta que podrás colocar tanto en tu jardín como en el interior de tu hogar. Con alrededor de 200 tipos de Jazmín diferentes, todos ellos tienen una característica común, el color de sus flores con cinco pétalos solo puede ser blanco, amarillo o rojizo. Sea cual sea la variedad de Jazmín que escojas su fragancia intensa a la par que dulce conquistará tus sentidos y sus bayas en color negro te encantarán.</string>
    <string name="titulo_cuidados_jazmin">Cuidados</string>
    <string name="c_1_jazmin">Ideales tanto para interior como para exterior, los Jazmines son un tipo de planta que no requiere de complejos cuidados, pero sí que es cierto que si quieres que tu Jazmín luzca espléndido, deberás prestar atención a algunos aspectos.</string>
    <string name="c_2_jazmin">Se adapta a todo tipo de terrenos, siempre y cuando estén húmedos y bien drenados. El Jazmín necesita luz solar en abundancia, por lo que deberás colocarlo a pleno sol o en un lugar en semisombra. Respecto al riego, es un aspecto que no puedes descuidar, especialmente en los meses del año más calurosos, ya que los Jazmines necesitan que los rieguen de manera abundante.</string>
    <string name="titulo_plagas_jazmin">Plagas y enfermedades</string>
    <string name="cp_p_1_jazmin">Entre las enfermedades comunes de la jazmín blanco están el mildiú, la enfermedad del tizón y la fusariosis.</string>
    <string name="cp_p_2_jazmin">Se trata de enfermedades que principalmente afectan al tallo y a las hojas en vez de a las raíces, y pueden ser tratadas con un fungicida o con bicarbonato de soda disuelto en agua.</string>
    <string name="ubicacion_lavanda">Floración: julio</string>
    <string name="riego_lavanda">Riego: Moderado</string>
    <string name="titulos_descrip_lavanda">Características</string>
    <string name="d_1_lavanda">La planta de lavanda es una de las hierbas aromáticas más populares, tanto por su belleza como por su color y perfume. Puedes cultivarla en tiestos y se riega una vez por semana en las zonas de clima cálido y si recibe el sol 6 horas al día. Pero también es una de las plantas resistentes al frío, así que no dudes en poner lavanda en tu jardín, una de las plantas de exterior que resistirá al invierno. Ten en cuenta que debe recibir al menos 6 horas diarias de sol.</string>
    <string name="titulo_cuidados_lavanda">Cuidados</string>
    <string name="c_1_lavanda">Necesita una buena ventilación. Si decides plantarla en el suelo, evita hacerlo cerca de otras plantas, y si lo haces en maceteros grandes y bonitos, procura que tenga un diámetro de entre 30 y 40 cm.</string>
    <string name="c_2_lavanda">Para que crezca bien, utiliza un sustrato alcalino y si el suelo es ácido, compensa con la acidez con un sustrato específico. Necesita tener un buen drenaje. En los meses de calor, riega 1 ó 2 veces por semana, sin mojar las ramas y las flores.</string>
    <string name="titulo_plagas_lavanda">Plagas y enfermedades</string>
    <string name="cp_p_1_lavanda">Las plagas más cómunes de la lavanda son conchinilla algodonosa, larvas de cecidómidos, escarabajo melighetes, orugas de la lavanda o pulgones.</string>
    <string name="cp_p_2_lavanda"> Una vez que conocemos las plagas de la lavanda vamos a ver cuáles son las enfermedades más comunes. Entre ellas, destacan: las podredumbres y las enfermedades víricas.</string>
    <string name="ubicacion_limonero">Ubicación: protegido del frío y con luz solar directa</string>
    <string name="riego_limonero">Riego: frecuente</string>
    <string name="titulos_descrip_limonero">Características</string>
    <string name="d_1_limonero">El limonero, o Citrus x limon, que es su nombre científico, es un árbol de hoja perenne que llega a alcanzar unas alturas promedio de en torno a los 6 metros. Son frutales que llegan a vivir unos 60 o 70 años, con lo que una vez empiece a dar frutos, tu limonero te acompañará prácticamente durante toda tu vida.</string>
    <string name="titulo_cuidados_limonero">Cuidados</string>
    <string name="c_1_limonero">Empezamos a explicarte cómo cuidar un limonero hablando sobre el clima, pues es probablemente uno de los puntos más importantes. Se trata del cítrico menos tolerante al frío de todos, por lo que necesita de un clima en el que las heladas no sean comunes ni prolongadas. Una exposición por debajo de los -3 ºC de forma no puntual causará graves daños en la mayoría de árboles. Su temperatura ideal es de entre 17 ºC y 28 ºC.</string>
    <string name="c_2_limonero">En invierno, ante climas fríos, uno de los puntos más importantes del mantenimiento de un limonero consiste en cubrir el árbol con plástico de invernadero o algún otro material transpirable que deje pasar la luz solar o, incluso, moverlo a una ubicación de interior.</string>
    <string name="titulo_plagas_limonero">Plagas y enfermedades</string>
    <string name="cp_p_1_limonero">Las principales plagas del limonero son minador del limonero, pulgones, conchinilla algodonosa y araña roja.</string>
    <string name="cp_p_2_limonero">Las enfermedades más comunes son alternaria alternata, exocortis, virus de la tristeza, penicillium o psoriasis.</string>
    <string name="ubicacion_lirios">Floración: primavera</string>
    <string name="riego_lirios">Riego: 3 a 4 veces por semana</string>
    <string name="titulos_descrip_lirios">Características</string>
    <string name="d_1_lirios">Con el lirio pasa como en muchas otras plantas. Pertenece a grupos tan extensos que puedes tener 2 géneros a la vez. Como tal, el lirio pertenece al género Iris (Iridáceas), a la que pertenece una de las especies más famosas (lirio ornamental y lirio común). Por otra parte, también existen lirios europeos que pertenecen al género Lillium.</string>
    <string name="titulo_cuidados_lirios">Cuidados</string>
</resources>